fix(tribe-landingpage): Change background-image opacity tribe menu header
Background image was not visible anymore because the opacity was set to 0

Fixes: #699

--- a/app/client/stylesheets/components/_pu-tribebackground.scss
+++ b/app/client/stylesheets/components/_pu-tribebackground.scss
@@ -1,5 +1,5 @@
 .pu-tribebackground {
-    opacity: 0;
+    opacity: 0.2;
     transform: scale(1.05);
     background-image: url(/images/tribestart.jpg);
     position: absolute;
